--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
     <string name="app_name">Luminary Take Home</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <string name="fetch_data">Fetching Data</string>
-    <string name="error">Error</string>
+    <string name="fetch_data_error_title">Something goes wrong</string>
+    <string name="error_button_text">Retry</string>
 
     <string name="fetch_organization">Fetching Organization</string>
     <string name="fetch_user">Fetching User</string>
